[backend] Add replyTo for exercise and scenario